# my_bot

./: CMakeLists.txt  README.md  commands.md  package.xml
config/: joystick.yaml  mapper_params_online_async.yaml  twist_mux.yaml  view_bot.rviz
description/: Gazebo_control.xacro  camera.xacro  dept_camera.xacro  lidar.xacro  real_bot.xacro  robot.urdf.xacro  robot_core.xacro  simulation_bot.xacro
launch/: joystick.launch.py  launch_sim.launch.py  turtle_bringup.launch.py
scripts/: camera.py  publisher.py  serial_comm_node.py  static_tf.py
worlds/: my_world.world
